<resources>
    <string name="app_name">Quotation Shake</string>
    <string name="get_quotations">Get quotations</string>
    <string name="favourite_quotations">Favourite quotation</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_text">QUOTATIONSHAKE By \n David Andrés \n Your contact info 2019</string>
    <string name="settings_name">Name that identifies the user</string>
    <string name="settings_quotations">Quotations will be received in the selected language</string>
    <string name="settings_web">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_get_radiobutton">GET</string>
    <string name="settings_post_radiobutton">POST</string>
    <string name="settings_edittext">Input your name</string>
    <string name="favourite">Favourite quotations</string>
    <string name="favourite_author_info">AUTHOR INFO</string>
    <string name="quotation">Random quotations</string>
    <string name="quotation_welcome">Hello %1s!\n Press refresh to get a new quotation!</string>
    <string name="dialog_title">Deleting quote</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="dialog_message_clear">Are you sure you want to delete all?</string>
    <string-array name="idiomas">
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>
