<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacosro.seminario.MainActivity">

    <Button
        android:id="@+id/get"
        android:layout_width="368dp"
        android:layout_height="117dp"
        android:text="@string/get_quotations"
        app:layout_constraintBottom_toTopOf="@+id/favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favourite"
        android:layout_width="368dp"
        android:layout_height="118dp"
        android:text="@string/favourite_quotations"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get" />

    <Button
        android:id="@+id/settings"
        android:layout_width="368dp"
        android:layout_height="118dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourite" />

    <Button
        android:id="@+id/about"
        android:layout_width="368dp"
        android:layout_height="118dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

</android.support.constraint.ConstraintLayout>
